maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	gauche
        ^Escaper:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if(estFaceMur){
        ^Escaper:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	return false
        ^