maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
	while(!estSurBiscuit){
		while(!estFaceMur&&keepHandOnSideWall){
			avance
		}
		gauche
	}
}

def keepHandOnSideWall():Boolean{
	gauche
	if(estFaceMur){
		droite 
		return true
	}
	else{
		droite
		return false
	}
	return false
}
